# Alien-Breed-PC

./: .gitignore  CMakeLists.txt  README.md  ab3d.ini.template  game_output.txt  move_debug_check.txt  move_debug_check2.txt  parse_out.txt
amiga/: README.md
cmake/: copy_ab3d_ini_if_missing.cmake
docs/: vec_format.md
pc/: CMakeLists.txt
pc/src/: control_loop.c  control_loop.h  game_data.h  game_loop.c  game_loop.h  game_state.c  game_state.h  game_types.h  level.c  level.h  math_tables.c  math_tables.h  movement.c  movement.h  objects.c  objects.h  player.c  renderer.c  renderer.h  sb_decompress.c  sb_decompress.h  stub_audio.c  stub_audio.h  stub_display.c  stub_display.h  stub_input.c  stub_io.c  stub_io.h  visibility.c  visibility.h
src/: ai.c  ai.h  audio.c  audio.h  control_loop.c  display.c  display.h  game_data.c  game_data.h  game_loop.c  game_loop.h  game_state.c  game_state.h  game_types.h  input.c  input.h  io.c  io.h  level.c  level.h  logging.h  main.c  math_tables.c  math_tables.h  movement.c  movement.h  objects.c  objects.h  player.c  player.h  poly_object.h  renderer.c  renderer.h  renderer_3dobj.c  renderer_3dobj.h  renderer_alloc.h  sb_decompress.c  settings.c  settings.h  sprite_palettes.c  (+11 more)
tools/: pal_to_header.py  parse_level.c  raw_to_wav.py  vec_to_c.py
